kubernetes/bookstack/bookstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: bookstack
  name: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bookstack
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: bookstack
    spec:
      containers:
        - env:
            - name: APP_URL
              value: https://wiki.borgwardtech.net
            - name: DB_DATABASE
              value: bookstackapp
            - name: DB_HOST
              value: bookstack-db
            - name: DB_PASS
              value: Server_123
            - name: DB_USER
              value: bookstack
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
          image: ghcr.io/linuxserver/bookstack
          name: bookstack
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: bookstack
        - env:
            - name: MYSQL_DATABASE
              value: bookstackapp
            - name: MYSQL_PASSWORD
              value: Server_123
            - name: MYSQL_ROOT_PASSWORD
              value: Server_123
            - name: MYSQL_USER
              value: bookstack
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/Berlin
          image: ghcr.io/linuxserver/mariadb
          name: bookstack-db
      resources: {}
      volumeMounts:
        - mountPath: /config
          name: bookstack-db
  restartPolicy: Always
  volumes:
    - name: bookstack-db
      persistentVolumeClaim:
        claimName: bookstack-db
    - name: bookstack
      persistentVolumeClaim:
        claimName: bookstack
status: {}
