kubernetes/bookstack/bookstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: bookstack
  name: bookstack
spec:
  ports:
    - name: "6875"
      port: 6875
      targetPort: 80
  selector:
    io.kompose.service: bookstack
  type: LoadBalancer
status:
  loadBalancer: {}
