kubernetes/bookstack/bookstack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: bookstack
  namespace: bookstack
spec:
  rules:
    - host: wiki.kubenet.lan
      http:
        paths:
          - backend:
              service:
                name: bookstack
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
